fix mbl author card title size and spacing, adjust tablet post img size at 1100px breakpoint

--- a/style.css
+++ b/style.css
@@ -408,7 +408,7 @@ header {
 	overflow: visible;
 }
 .search-wrap {
-	max-width: 1200px;
+	max-width: 1100px;
 	margin: 0;
 }
 .search-wrap label {width: 100%;}
@@ -649,8 +649,12 @@ h6{
   line-height: 1;
   text-transform: uppercase;
 }
-.post-meta-title{margin: .6em auto;}
-.comments-title {font-size: 24px;}
+.post-meta-title{ 
+	margin: 1em auto;
+}
+.comments-title { 
+	font-size: 24px;
+}
 
 .entry-content h1, 
 .entry-content h2,
@@ -1241,7 +1245,7 @@ span.icon-love:before {
 	.h2,
 	h2.post-meta-title{
 		font-family: 'Avenir-Heavy';
-		font-size: 20px;
+		font-size: 18px;
 		font-weight: 600;
 		line-height: 1.5;
 	}
@@ -1690,6 +1694,9 @@ span.icon-love:before {
 	.post-thumb img {
 		border-radius: 12px;
 	}
+	.post-content.col-md-4 {
+		width: 96.5%;
+	}
 	
 	/* CONTENT - CATEGORIES --------------------------------------------------------- 768px */
 	.single-post-cat,
@@ -1771,14 +1778,14 @@ span.icon-love:before {
 }
 
 
-/* 992px ------------------------------------------------------------------------------ 992px */
-@media (min-width: 992px) { /* -------------------------------------------------------- 992px */
+/* 1100px ------------------------------------------------------------------------------ 1100px */
+@media (min-width: 1100px) { /* -------------------------------------------------------- 1100px */
 	.large{font-size: 1.25em;}
 	#main-menu .search {margin-left: 0;}
 	button, input, optgroup, select, textarea {font-size: 1em}
 	input.field.s {width: 100%;}
 	
-	/* HEADER --------------------------------------------------------- 992px */
+	/* HEADER --------------------------------------------------------- 1100px */
 	header{height: 500px; padding-top:0;}
 	.error404 header,
 	.search header,
@@ -1796,7 +1803,7 @@ span.icon-love:before {
 	.fancybox-overlay.fancybox-overlay-fixed {top: 145px;}
 	#main-menu .navbar-nav.top-drop-menu>li>a{text-transform: capitalize;}
 			
-	/* NAV - MAIN MENUS --------------------------------------------------------- 992px */
+	/* NAV - MAIN MENUS --------------------------------------------------------- 1100px */
 	.mobile-logo-wrap{display: none;}
 	.pull-right{margin-top: 3.75em; padding-right: 0;}
 	
@@ -1857,7 +1864,7 @@ span.icon-love:before {
 	#main-menu .navbar-nav li:first-child a:hover {padding-left: 0;}
 	#main-menu .collapse.in {display: none !important;}
 	
-	/* NAV - TOP MENU --------------------------------------------------------- 992px */
+	/* NAV - TOP MENU --------------------------------------------------------- 1100px */
 	#butt {
 		float: right;
 		margin-right: 0;
@@ -1897,8 +1904,11 @@ span.icon-love:before {
 		width: 10%;
 		margin-top: 4em;
 	}
+	.main-header-container {
+		flex-direction: column-reverse;
+	}
 	
-	/* NAV - TOP MENU SLIDE DOWN --------------------------------------------------------- 992px */
+	/* NAV - TOP MENU SLIDE DOWN --------------------------------------------------------- 1100px */
 	.layer {
 		background-image: url(images/top-nav-bg.jpg);
 		background-size: 100% 100%;
@@ -1971,7 +1981,7 @@ span.icon-love:before {
      box-shadow: none;
   }
 
-  /* PAGE STRUCTURE - TITLES --------------------------------------------------------- 992px */
+  /* PAGE STRUCTURE - TITLES --------------------------------------------------------- 1100px */
 	
 	h1{font-size: 3.5em;}
 	h2,h3{font-size: 2.625em;}
@@ -1986,7 +1996,7 @@ span.icon-love:before {
 	}
 	#filter {top: -4.8em;}
 	
-	/* CONTENT --------------------------------------------------------- 992px */
+	/* CONTENT --------------------------------------------------------- 1100px */
 	.author-name{float: left;}
 	.entry-header .author-name{float: none; margin-top: 0;}
 	p.author-email {
@@ -2001,7 +2011,7 @@ span.icon-love:before {
 		letter-spacing: .5px;
 	}
 	
-	/* CONTENT - HOME/FRONT --------------------------------------------------------- 992px */
+	/* CONTENT - HOME/FRONT --------------------------------------------------------- 1100px */
 	.blog-container.container {margin-top: 0;}
 	.home-container{padding-right: 0; margin-top: -5em;}
 	.blog-content.content.row{padding-top: 5em;}
@@ -2128,7 +2138,7 @@ span.icon-love:before {
 	.info-link { margin: 0 auto;}
 	.author-profile .info-link {margin: 0 1.75em;}
 	
-	/* CONTENT - SINGLES --------------------------------------------------------- 992px */
+	/* CONTENT - SINGLES --------------------------------------------------------- 1100px */
 	.single .entry-header{
 		top: -222px;
 		border-top-right-radius: 12px;
@@ -2141,6 +2151,9 @@ span.icon-love:before {
 		border-top-left-radius: 12px;
 		border-bottom-right-radius: 12px;
 		border-bottom-left-radius: 0;
+	}
+	.post-content.col-md-4 {
+		width: 33.33333%;
 	}
 	.single .entry-content h1,
 	.single .entry-content h3,
@@ -2209,7 +2222,7 @@ span.icon-love:before {
 		font-size: 16px;
 	}
 	
-	/* FOOTER --------------------------------------------------------- 992px */
+	/* FOOTER --------------------------------------------------------- 1100px */
 	.search .container.foot-container,
 	.foot-container{ padding: 5em 0 1em;}
 	#foot-content {
